Attempting to stop wrapping code.

--- a/css/thoughtspark.org.css
+++ b/css/thoughtspark.org.css
@@ -83,6 +83,12 @@ li span {
   font-style: italic;
 }
 
+.highlight > pre {
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
+}
+
 /* Sticky Footer */
 #wrapper {
   min-height: 100%;
